canary/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "app.shawn.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sinfo
  namespace: canaryns
spec:
  hosts:
    - "app.shawn.com"
  gateways:
    #    - sinfo-gateway
    - bookinfo-gateway
  http:
    - match:
        - uri:
            exact: /sinfo
      route:
        - destination:
            host: sinfo
            subset: v1
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sinfo
  namespace: canaryns
spec:
  host: sinfo
  subsets:
    - name: v1
      labels:
        version: v1
