canary/kube-ingress.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: default-http-backend
  namespace: canaryns
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: default-http-backend
          image: gcr.akscn.io/google_containers/defaultbackend:1.0
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 10m
              memory: 20Mi
            requests:
              cpu: 10m
              memory: 20Mi

---
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: canaryns
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: default-backend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-sinfo-ingress
  namespace: canaryns
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: sinfo.shawn.com
    http:
      paths:
        - path: /info
          backend:
            serviceName: sinfo
            servicePort: 8080
